Refreshed some files and removed all temp.png files

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,6 @@
 	<body>
 		<h1>Home page!!</h1>
 		<p>{{vf}}</p>
-		<!--<p> <img src="temp.png" alt = "graph"> </p>>
+		<img src="{{plotimg}}" alt = "graph"> 
 	</body>
 </html>
