--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,7 @@
 	<body>
 		<h1>Home page!!</h1>
 		<p>{{vf}}</p>
-		<img src="{{plotimg}}" alt = "graph"> 
+		<p><img src = "{{url_for('plots',filename=plotimg)}}"></p>
+		 
 	</body>
 </html>
