--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,8 @@
 	<body>
 		<h1>Home page!!</h1>
 		<p>{{vf}}</p>
-		<p><img src = "{{url_for('plots',filename=plotimg)}}"></p>
+		<p><img src = "{{url_for('static',filename=plotimg)}}"></p>
+
 		 
 	</body>
 </html>
