--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,20 @@
 <!doctype html>
 <html>
 	<head>
-		<title>Home page</title>
+	<style>
+		.center{
+			display: block;
+			margin-left: auto;
+			margin-right: auto;
+			width: 50%;
+		}
+	</style>
+		<title>EV Charger</title>
 	</head>
 	<body>
-		<h1>Home page!!</h1>
+		<h1 align = "center">Plot of charger after {{secs}} seconds</h1>
 		<p>{{vf}}</p>
-		<p><img src = "{{url_for('static',filename=plotimg)}}"></p>
+		<p><img src = "{{url_for('static',filename=plotimg)}}" alt = "plot" class = "center"></p>
 
 		 
 	</body>
