--- a/templates/base.html
+++ b/templates/base.html
@@ -1,10 +1,18 @@
 <!doctype html>
 <html>
 <head>
+	<style>
+		.center{
+			display: block;
+			margin-left: auto;
+			margin-right: auto;
+			width: 50%;
+		}
+	</style>
+
 	<title>{%block title%}{%endblock%}</title>
 </head>
 <body>
-	<h1>generico</h1>
 	{%block content%}
 	{%endblock%}
 </body>
