--- a/templates/plot.html
+++ b/templates/plot.html
@@ -1,7 +1,11 @@
 {%extends "base.html"%}
 {%block title%}EV Charger{%endblock%}
 {%block content%}
-		<h1 align = "center">Plot of charger after {{secs}} seconds</h1	
+<h3 align = "center">Plot of charger after {{secs}} seconds</h3>
 		<p><img src = "{{url_for('static',filename=plotimg)}}" alt = "plot" class = "center"></p>
-		<p align = "center">{{vf}}</p>
+		<p align = "center">Last voltage read:{{vf}}</p>
+
+		<form action = /home>
+			<p align = "center"><input type = "submit" value = "Return" /></p>
+		</form>
 {%endblock%}
