--- a/templates/home.html
+++ b/templates/home.html
@@ -3,9 +3,26 @@
 {%block content%}
 <h3 align = "center">EV Charger battery plotter </h3>
 <p align = "center">Please submit the number of seconds you want to plot the current battery voltage of your EV </p>
-<form action = "#" method = "post">
+<form onsubmit = "load()" action = "#" method = "post">
 	<p align = "center">Seconds:
 	<input type = "text" name = "secs" /></p>
 	<p align = "center"><input type = "submit" value = "submit" /></p>
 </form>
+
+<h1 align = "center" id="count">10</h1>
+<script type="text/javascript">
+	var counter = 10;
+	setInterval( load(){
+		counter--;
+		if( counter >= 0 ){
+			id = document.getElementById("count");
+			id.innerHTML = counter;
+		}
+		if( counter === 0 ){
+			id.innerHTML = "COMPLETE";
+		}
+	}, 1000);
+</script>
+
+
 {%endblock%}
