Fixed ortographic errors

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,7 @@
 {%extends "base.html"%}
 {%block title%}Home page{%endblock%}
 {%block content%}
-<h3 align = "center">EV Charger battery plotter </h3>
+<h3 align = "center">EV battery charger plotter </h3>
 <p align = "center">Please submit the number of seconds you want to plot the current battery voltage of your EV </p>
 <form onsubmit = "load()" action = "#" method = "post">
 	<p align = "center">Seconds:
