--- a/templates/plot.html
+++ b/templates/plot.html
@@ -1,5 +1,5 @@
 {%extends "base.html"%}
-{%block title%}EV Charger{%endblock%}
+{%block title%}Plot{%endblock%}
 {%block content%}
 <h3 align = "center">Plot of charger after {{secs}} seconds</h3>
 		<p><img src = "{{url_for('static',filename=plotimg)}}" alt = "plot" class = "center"></p>
